--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "author": "jin liu",
-  "dependencies": {
+  "name": "cyclare",
   "version": "0.0.1",
-  "description": "first",
+  "description": "Cyclare WebRTC",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+     "start": "node server.js"
   },
+  "author": "jin liu",
   "dependencies": {
     "node-static": "0.7.7",
     "socket.io": "1.4.5"
